# paper-to-wechat

./: .gitignore  CLAUDE.md  README.md
.claude/agents/: cover-image-generator.md  paper-to-wechat-orchestrator.md  pdf-content-extractor.md  wechat-article-composer.md  wechat-draft-publisher.md
mcp/pdf-parser-mcp/: pyproject.toml  requirements.txt  server.py
mcp/screenshot-mcp/: package-lock.json  package.json
mcp/screenshot-mcp/src/: index.ts
mcp/wenyan-mcp/src/: index.ts
scripts/: generate_cover_html.py  img_preprocess.py
templates/: cover_template.html
